@@ -1,4 +1,4 @@
-aria2 - a simple utility for downloading files.
+aria2 - The high speed download utility
 
 1. Disclaimer
 -------------
@@ -22,6 +22,7 @@ aria2 is in very early development stage. Currently it has following features:
 * It can run as a daemon process.
 * BitTorrent protocol support with fast extension.
 * Selective download in multi-file torrent
+* Metalink version 3.0 support(http/ftp only).
 
 3. How to build
 ---------------
@@ -34,9 +35,14 @@ The executable is aria2c in src directory.
 -------------
 In order to enable HTTPS support, you need GNU TLS or OpenSSL.
 In order to enable BitTorrent support, you need GNU TLS+libgcrypt or OpenSSL.
+In order to enable Metalink support, you need libxml2. Optionally GNU TLS+
+libgcrypt or OpenSSL are required for checksum checking support(MD5, SHA1).
 
 GNU TLS has precedence over OpenSSL if both libraries are installed.
 If you prefer OpenSSL, run configure with "--without-gnutls".
+
+You can disable BitTorrent, Metalink support by providing --disable-bittorrent,
+--disable-metalink respectively to configure script.
 
 5. BitTorrrent
 --------------
@@ -73,3 +79,14 @@ Note:
 * The maximum number of peers is 55.
 * After selective download completes, aria2 is going to download rest of the
 files.
+
+6. Metalink
+-----------
+The current implementation only supports http/ftp downloading in Metalink.
+BitTorrent and other p2p protocols are ignored.
+
+For checksum checking, both MD5 and SHA1 are supported. If both values are
+provided, then aria2 uses SHA1. If checksum checking is failed, aria2 doesn't
+retry the download and just exits with non-zero return code.
+
+The supported user preferences are version, language and os.
